snapshot-tests/tests/snapshots/parser__datetimes__bad_hour.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-datetime]: 
  ┌─ bad_hour:1:5
  │
1 │ a = 2016-09-09T25:00:00
  │     ^^^^^^^^^^^^^^^^^^^ invalid datetime: hour is out of range at a
